--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-  margin-top: 120px;
+  margin: 0;
   font-family: 'Open Sans', sans-serif;
   background: white;
   font-size: 1rem;
